--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -4,4 +4,7 @@
     <meta http-equiv="refresh" content="0;url={{ page.redirect_url }}">
     <title>Redirecting to {{ page.redirect_url }}</title>
   </head>
+  <body>
+    <h1>HI</h1>
+  </body>
 </html>
